<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="77dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/km"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="77dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/Mi"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/result_number"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button1"
        android:layout_width="98dp"
        android:layout_height="89dp"
        android:onClick="onButtonClick"
        android:text="@string/convert"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="98dp"
        android:layout_height="89dp"
        android:onClick="onButtonClick"
        android:text="@string/convert"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="98dp"
        android:layout_height="89dp"
        android:layout_marginTop="88dp"
        android:onClick="onButton2Click"
        android:text="@string/convert"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="enter radius"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <EditText
        android:id="@+id/editTextNumber8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:enabled="false"
        android:ems="10"
        android:hint="@string/area"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="81dp"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/r"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber7"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/S"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber7"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>